<resources>
    <string name="app_name">TechBridge</string>
    <string name="softdevelopers">SoftDevelopers</string>
    <string name="username">Username</string>
    <string name="logodetechbridge">Logodetechbridge</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="menu">Menu</string>
    <string name="icondashboard">IconDashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="iconconfig">iconconfig</string>
    <string name="iconacercade">iconacercade</string>
    <string name="acerca_de">Acerca De</string>
    <string name="iconcerrarsesion">iconcerrarsesion</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="iconback">iconback</string>
    <string name="consultas">Consultas</string>
    <string name="selecciona_una_opcion">Selecciona una opcion</string>
    <string name="seleccione_una_consulta">seleccione una consulta</string>
    <string name="iconmargen">iconmargen</string>

    <string name="margen_de_ganancia_por_proyecto">Margen de ganancia por Proyecto</string>
    <string name="iconmargencliente">iconmargencliente</string>
    <string name="margen_de_ganacia_promedio_por_cliente">Margen de ganacia promedio por cliente</string>
    <string name="margen_de_ganancia_por_metodolog_a">Margen de ganancia por metodología</string>
    <string name="iconmargenmetod">iconmargenmetod</string>
    <string name="iconganciames">iconganciames</string>
    <string name="margen_de_ganancia_por_mes">Margen de ganancia por mes</string>
    <string name="iconproyectosconmasgancia">iconproyectosconmasgancia</string>
    <string name="proyectos_con_mayor_margen_de_ganancia">Proyectos con mayor margen de ganancia</string>
    <string name="proyecto_con_menor_margen_de_ganancia">Proyecto con menor margen de ganancia</string>
    <string name="margen_de_15_proyectos_entregados_en_2010_ordenados_alfab_ticamente">Margen de 15 proyectos entregados en 2010, ordenados alfabéticamente.</string>
    <string name="clientes_con_ganancias_mayores_a_50_000">Clientes con ganancias mayores a 50,000.</string>
    <string name="ganancia_total_de_los_ltimos_4_a_os_sin_incluir_el_actual">Ganancia total de los últimos 4 años (sin incluir el actual).</string>
    <string name="ganancia_total_de_los_ltimos_4_a_os">Ganancia total de los últimos 4 años.</string>
    <string name="top_10_proyectos_con_mayor_margen">Top 10 proyectos con mayor margen.</string>
    <string name="top_10_proyectos_con_menor_margen_por_a_o">Top 10 proyectos con menor margen por año.</string>
    <string name="costo_trimestral_total_en_2023">Costo trimestral total en 2023.</string>
    <string name="proyectos_con_costo_superior_a_1_500_000">Proyectos con costo superior a 1,500,000.</string>
    <string name="ganancia_de_los_ltimos_10_proyectos">Ganancia de los últimos 10 proyectos.</string>
    <string name="techbrigde_info">TECHBRIGDE Info</string>
    <string name="_0_0_1">0.0.1</string>
    <string name="techbridge_es_una_aplicaci_n_desarrollada_por_softdevelopers_que_proporciona_informaci_n_esencial_para_la_toma_de_decisiones_empresariales_esta_es_la_primera_versi_n_de_la_aplicaci_n_dise_ada_para_ayudar_a_las_empresas_a_optimizar_sus_procesos_mediante_el_acceso_r_pido_y_sencillo_a_datos_clave_nuestro_objetivo_es_ofrecer_una_plataforma_intuitiva_que_permita_a_los_usuarios_tomar_decisiones_informadas_basadas_en_datos_precisos_y_actualizados">TechBridge es una aplicación desarrollada por SoftDevelopers que proporciona información esencial para la toma de decisiones empresariales. Esta es la primera versión de la aplicación, diseñada para ayudar a la empresa a optimizar sus procesos mediante el acceso rápido y sencillo a datos clave. Nuestro objetivo es ofrecer una plataforma intuitiva que permita a los usuarios tomar decisiones informadas basadas en datos precisos y actualizados.</string>
    <string name="top_10_proyectos_con_mayor_ganancia">Top 10 proyectos con mayor ganancia</string>
    <string name="top_10_proyectos_con_menor_margen_de_ganancia">Top 10 proyectos con menor margen de ganancia</string>
    <string name="proyectos_con_costo_superior_a_1_000_000">Proyectos con costo superior a 1,000,000.</string>

</resources>