<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="300dp"
                android:background="@color/white"
                android:contentDescription="@string/iconback"
                android:translationY="@dimen/_20dp"
                app:srcCompat="@drawable/iconback"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/txtSoft"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:fontFamily="@font/lilita_one"
                android:text="@string/menu"
                android:textAlignment="center"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="-10dp"
                android:textColor="@color/blue"
                android:textSize="24sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="113dp"
            android:translationY="20dp"
            android:background="@drawable/boder_menu"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnconsultas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white"
                android:contentDescription="@string/icondashboard"
                app:srcCompat="@drawable/icondashboard" />

            <TextView
                android:id="@+id/txtDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:text="@string/consultas"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="19sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="113dp"
            android:background="@drawable/boder_menu"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:translationY="35dp">

            <ImageButton
                android:id="@+id/btnConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white"
                android:contentDescription="@string/iconconfig"
                app:srcCompat="@drawable/iconconfig" />

            <TextView
                android:id="@+id/txtconfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:text="@string/configuraciones"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="19sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="113dp"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:translationY="45dp"
            android:background="@drawable/boder_menu"
            tools:ignore="UselessLeaf" >

            <ImageButton
                android:id="@+id/btnAcercade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iconacercade"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/iconacerca" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:text="@string/acerca_de"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="19sp"
                tools:ignore="TextSizeCheck"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="113dp"
            android:orientation="vertical"
            android:translationY="55dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/boder_menu">

            <ImageButton
                android:id="@+id/btncerrarsesion"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:contentDescription="@string/iconcerrarsesion"
                android:padding="20dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/cerrarsesion" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:textAlignment="center"
                android:textColor="@color/rojo"
                android:textSize="19sp"
                tools:ignore="TextSizeCheck"
                android:text="@string/cerrar_sesi_n" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>