<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consulta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            android:background="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/btnBackconsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="300dp"
                    android:background="@color/white"
                    android:contentDescription="@string/iconback"
                    android:translationY="@dimen/_20dp"
                    app:srcCompat="@drawable/iconback"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/txtcon"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="-20dp"
                    android:fontFamily="@font/lilita_one"
                    android:text="@string/consultas"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    tools:ignore="TextSizeCheck" />

            </LinearLayout>

            <!-- Las filas con los botones y textos -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_consulta"
                    android:layout_marginStart="29dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnmarganancia"
                        android:layout_width="119dp"
                        android:layout_height="104dp"
                        android:translationY="5dp"
                        android:paddingStart="@dimen/_20dp"
                        android:background="@null"
                        android:contentDescription="@string/iconmargen"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/iconmargen" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-120dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/margen_de_15_proyectos_entregados_en_2010_ordenados_alfab_ticamente"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="105dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnmargencliente"
                        android:layout_width="127dp"
                        android:layout_height="94dp"
                        android:background="@null"
                        android:contentDescription="@string/iconmargencliente"
                        android:paddingStart="25dp"
                        android:scaleType="fitCenter"
                        android:translationY="12dp"
                        app:srcCompat="@drawable/iconmargencliente" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-130dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/clientes_con_ganancias_mayores_a_50_000"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="118dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:translationY="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btngananciamet"
                        android:layout_width="124dp"
                        android:layout_height="93dp"
                        android:background="@null"
                        android:contentDescription="@string/iconmargenmetod"
                        android:paddingStart="@dimen/_20dp"
                        android:scaleType="fitCenter"
                        android:translationY="5dp"
                        app:srcCompat="@drawable/icongan" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-130dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/ganancia_total_de_los_ltimos_4_a_os"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="105dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/btnganciames"
                        android:layout_width="140dp"
                        android:layout_height="99dp"
                        android:background="@null"
                        android:paddingStart="5dp"
                        android:scaleType="fitCenter"
                        android:translationY="12dp"
                        android:contentDescription="@string/iconganciames"
                        app:srcCompat="@drawable/iconganancia" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-140dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/top_10_proyectos_con_mayor_margen"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="115dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:translationY="16dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_consulta"
                    android:layout_marginStart="29dp"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/btnmayorganproy"
                        android:layout_width="116dp"
                        android:layout_height="100dp"
                        android:background="@null"
                        android:contentDescription="@string/iconproyectosconmasgancia"
                        android:paddingStart="20dp"
                        android:scaleType="fitCenter"
                        android:translationY="5dp"
                        app:srcCompat="@drawable/iconspu" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-130dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/proyectos_con_mayor_margen_de_ganancia"
                        android:textAlignment="center"
                        android:paddingStart="8dp"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="115dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/btnmenorgancia"
                        android:layout_width="127dp"
                        android:layout_height="98dp"
                        android:background="@null"
                        android:contentDescription="@string/iconproyectosconmasgancia"
                        android:paddingStart="10dp"
                        android:scaleType="fitCenter"
                        android:translationY="5dp"
                        app:srcCompat="@drawable/iconmenorganancia" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-127dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/top_10_proyectos_con_menor_margen_por_a_o"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="110dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:orientation="horizontal"
                android:translationY="26dp">

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="29dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btngancia10"
                        android:layout_width="129dp"
                        android:layout_height="106dp"
                        android:background="@null"
                        android:contentDescription="@string/iconproyectosconmasgancia"
                        android:paddingStart="10dp"
                        android:scaleType="fitCenter"
                        android:translationY="5dp"
                        app:srcCompat="@drawable/icongan10" />

                    <TextView
                        android:id="@+id/txtganancia10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-130dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/costo_trimestral_total_en_2023"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="130dp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/border_consulta"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnmendasd"
                        android:layout_width="127dp"
                        android:layout_height="98dp"
                        android:background="@null"
                        android:contentDescription="@string/iconproyectosconmasgancia"
                        android:paddingStart="10dp"
                        android:scaleType="fitCenter"
                        android:translationY="5dp"
                        app:srcCompat="@drawable/iconalto" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-129dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lilita_one"
                        android:text="@string/proyectos_con_costo_superior_a_1_500_000"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        android:translationY="125dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
